force-app/main/default/objects/Renewal_Policy__mdt/Renewal_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Renewal Policy</label>
    <pluralLabel>Renewal Policies</pluralLabel>
</CustomObject>