force-app/main/default/objects/Renewal_Policy__mdt/fields/Allow_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Allow_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>