force-app/main/default/objects/Renewal_Policy__mdt/fields/Create_Opportunity_Days__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity_Days__c</fullName>
    <label>Create Opportunity Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>