force-app/main/default/objects/Renewal_Policy__mdt/fields/Partner_Confirmation_Days__c.field-meta.xml
<CustomField>
    <fullName>Partner_Confirmation_Days__c</fullName>
    <label>Partner Confirmation Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>