force-app/main/default/objects/Renewal_Policy__mdt/fields/Partner_Continuity_Policy__c.field-meta.xml
<CustomField>
    <fullName>Partner_Continuity_Policy__c</fullName>
    <label>Partner Continuity Policy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>