force-app/main/default/objects/Renewal_Policy__mdt/fields/Planning_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Planning_Window_Days__c</fullName>
    <label>Planning Window Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>