force-app/main/default/objects/Renewal_Policy__mdt/fields/Renewal_Protection_Mode__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Protection_Mode__c</fullName>
    <description
  >'None', 'Automatic', or 'On Approval' - whether qualify()/approve() should create a distinct Protection_Type__c = 'Renewal' Deal_Protection_Grant__c row for this policy.</description>
    <label>Renewal Protection Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>