force-app/main/default/objects/Renewal_Policy__mdt/fields/Require_Partner_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Require_Partner_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Partner Confirmation</label>
    <type>Checkbox</type>
</CustomField>