force-app/main/default/objects/Renewal_Policy__mdt/fields/Require_Renewal_Review__c.field-meta.xml
<CustomField>
    <fullName>Require_Renewal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Renewal Review</label>
    <type>Checkbox</type>
</CustomField>